--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_salda_analityczne.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_salda_analityczne.xhtml
@@ -32,7 +32,7 @@
   
     <bcf:ajaxs/>
     <p:dialog id="saldakontanalitycznych" header="Obroty i salda na kontach analitycznych na koniec miesiąca" widgetVar="saldakontanalitycznych"  maximizable="true"  
-              resizable="true" onShow="ustawdialog('saldakontanalitycznych','menuzestawienia',1800,750);doczeplistnerydopol();"
+              resizable="true" onShow="ustawdialog('saldakontanalitycznych','menuzestawienia',1900,750);doczeplistnerydopol();"
               onHide="resetujdialog('saldakontanalitycznych');"  closeOnEscape="true" 
               >
         <p:ajax event="open" listener="#{saldoAnalitykaView.odswiezsaldoanalityczne()}" update=":formtablicaanalityczne, :tabelazsumamianalityka:sumy"/>
@@ -184,6 +184,14 @@
                 <p:column headerText="syntetyka" width="140" >
                     <h:outputText id="pol12" value="#{loop.getTopKonto().getNazwaObcieta(40)}"/>
                     <p:tooltip for="pol12" value="#{loop.getTopKonto().pelnynumer} #{loop.getTopKonto().nazwapelna}" />
+                </p:column>
+                <p:column headerText="Wn poz." width="50" sortBy="#{loop.konto.pozycjaWn}">
+                    <h:outputText value="#{loop.konto.pozycjaWn}" rendered="#{loop.konto.pozycjaWn ne null}"/>
+                    <h:outputText value="!!" rendered="#{loop.konto.pozycjaWn eq null}" style="color:red;"/>
+                </p:column>
+                <p:column headerText="Ma poz." width="50" sortBy="#{loop.konto.pozycjaMa}">
+                    <h:outputText value="#{loop.konto.pozycjaMa}" rendered="#{loop.konto.pozycjaMa ne null}"/>
+                    <h:outputText value="!!" rendered="#{loop.konto.pozycjaMa eq null}" style="color:red;"/>
                 </p:column>
                 <p:rowExpansion rendered="#{saldoAnalitykaView.zzapisami}">
                     <p:dataTable value="#{loop.zapisy}" var="loopik" emptyMessage="nie ma rachunków na tym koncie" rowKey="#{loopik.hashCode()}"
