--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_import.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_import.xhtml
@@ -38,7 +38,7 @@
                         <h:outputText value="plik/pliki CSV/XML z dokumentami źródłowymi " style="font-weight: bold;"/>
                         <p:fileUpload fileUploadListener="#{bankImportKsiazkaView.zachowajplik}" auto="true"
                                       mode="advanced" dragDropSupport="true" multiple="true"
-                                      update="messages1" sizeLimit="10000000"   
+                                      update="messages1 akordeon:panelprzyciskowbankall akordeon:form_importbankall" sizeLimit="10000000"   
                                       fileLimitMessage="Można załadować tylko jeden plik na jedno ładowanie"
                                       uploadLabel="Wczytaj" label="Wybierz" cancelLabel="Rezygnuj" 
                                       style="height: 90px;" sequential="true">
@@ -90,7 +90,7 @@
                 <p:panelGrid columns="1" rendered="false" binding="#{bankImportKsiazkaView.grid3}" style="height: 580px;">
             <p:dataTable id="dataListImportall" value="#{bankImportKsiazkaView.pobranefaktury}" var="itemimp" rowIndexVar="row" widgetVar="tablicadokumentyimportall" 
                          selection="#{bankImportKsiazkaView.selected}" rowKey="#{itemimp.nr}"  
-                         style="width: 1500px; height: 540px; overflow-y: scroll; margin-top: 15px;margin-bottom: 5px;" filteredValue="#{bankImportKsiazkaView.pobranefakturyfilter}"
+                         style="width: 1600px; height: 540px; overflow-y: scroll; margin-top: 15px;margin-bottom: 5px;" filteredValue="#{bankImportKsiazkaView.pobranefakturyfilter}"
                          emptyMessage="Brak importowanych dokumentów" styleClass="gridZaksiegowane"
                          sortBy="#{itemimp.nr}"  >
                 <!--                     <p:ajax event="rowSelect" oncomplete="pokazwierszedok();" update=":formwpisdokument, :dialogwiersze" />-->
@@ -132,12 +132,12 @@
                     <h:outputText value="#{itemimp.kontrahent}" rendered="#{itemimp.kontrahent ne 'NOTPROVIDED'}"/>
                     <h:outputText value="prowizja" rendered="#{itemimp.kontrahent eq 'NOTPROVIDED'}"/>
                 </p:column>
-                <p:column headerText="klient" width="140" >
+                <p:column headerText="klient" width="180" >
                     <p:autoComplete value="#{itemimp.klient}" completeMethod="#{fakturaRozrachunkiView.completeKL}"
                                         var="p" itemLabel="#{p.npelna}" itemValue="#{p}" converter="#{klientConv}" title="wpisz nazwę lub nip kontrahenta"
                                         maxResults="20" maxlength="20" converterMessage="Nieudana konwersja Klient" 
                                         cache="true"  queryDelay="10" 
-                                        styleClass="wpisywaniekontrfk" style="width: 185px;" inputStyle="width: 170px;"
+                                        styleClass="wpisywaniekontrfk" style="width: 185px;" inputStyle="width: 180px;"
                                         >
                             <p:ajax event="query" global="false"/>
                             <p:ajax event="itemSelect" partialSubmit="true" global="false"/>
@@ -162,9 +162,13 @@
                 <p:column headerText="nr trans" width="90" sortBy="#{itemimp.nrtransakji}" filterBy="#{itemimp.nrtransakji}" filterMatchMode="contains">
                     <h:outputText value="#{itemimp.nrtransakji}"/>
                 </p:column>
+                 <p:column headerText="zak." width="30">
+                     <h:outputText value="&#x2713" rendered="#{itemimp.juzzaksiegowany}" style="color:green;"/>
+                </p:column>
                 <p:column width="40" >
                     <p:commandButton icon="fa fa-trash" actionListener="#{bankImportKsiazkaView.usun(itemimp)}" update="@form"/>
                 </p:column>
+                v
             </p:dataTable>
                     </p:panelGrid>
         </h:form>
