--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -7,7 +7,7 @@
 
     xmlns:bcf="http://brzaskun.com/facelets"
     >
-    <p:panel header="paski wynagrodzeń" rendered="#{pasekwynagrodzenView.ileszczegolow eq 'oddelegowanie'}">
+    <p:panel header="paski wynagrodzeń - poz. #{pasekwynagrodzenView.lista.size()}" rendered="#{pasekwynagrodzenView.ileszczegolow eq 'oddelegowanie'}">
         <style>
             .listaplac .ui-widget-content.ui-datatable-odd.ui-datatable-selectable {
                 border-width: 2px !important;
