kadry przekroczenie 26 lta oddelegowanie

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -81,7 +81,7 @@
                             <h:outputText value="razem społ. prac."/>
                         </p:column>
                          <p:column>
-                            <h:outputText value="społ. zagr."/>
+                            <h:outputText value="społ. Polska"/>
                         </p:column>
                         <p:column width="20" style="text-align: center;">
                             <h:outputText value="do 26lat" rendered="#{itempasek.do26lat eq true}" style="color:blue"/>
