--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_zapisynakoncie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_zapisynakoncie.xhtml
@@ -242,7 +242,7 @@
                             <h:outputText value="#{loop.dokfkS}-#{loop.wiersz.idporzadkowy}" rendered="#{kontoZapisFKView.pokaztransakcje eq true}" 
                                           style="#{loop.dokfkS.startsWith('WB') or loop.dokfkS.startsWith('RK') ? 'color: blue': 'color: initial'}"/>
                         </p:column>
-                        <p:column headerText="nr wl" width="100" styleClass="filter60"  style="text-align: center; font-size: x-small; word-break: break-all; word-wrap: break-word !important; white-space: pre-wrap;" sortBy="#{loop.dokfk.numerwlasnydokfk}"
+                        <p:column headerText="nr wl" width="100" styleClass="filter60"  style="text-align: left; font-size: x-small; word-break: break-all; word-wrap: break-word !important; white-space: pre-wrap;" sortBy="#{loop.dokfk.numerwlasnydokfk}"
                                   filterBy="#{loop.dokfk.numerwlasnydokfk}" filterMatchMode="contains">
                             <h:outputText value="#{loop.dokfk.numerwlasnydokfk}" id="opisa" rendered="#{loop.dokfk.importowany eq false}"/>
                             <h:outputText value="uwaga, niedokończony import!" rendered="#{loop.dokfk.importowany}" style="color:red;"/>
@@ -262,9 +262,9 @@
                             </h:outputText>
                             <p:tooltip value="#{loop.wiersz.tabelanbp.nrtabeli}" for="kurswierszazapisy"/>
                         </p:column>
-                        <p:column headerText="Wn" width="40" style="background-color: #e6f2ff;" sortBy="#{loop.kwota}"   filterBy="#{loop.kwota}" filterMatchMode="contains"
+                        <p:column headerText="Wn" width="40" style="background-color: #e6f2ff;" sortBy="#{loop.kwotaWn}"   filterBy="#{loop.kwotaWn}" filterMatchMode="contains"
                                   rendered="#{kontoZapisFKView.nierenderujkolumnnywalut eq false or kontoZapisFKView.pokaztransakcje eq true}" filterStyle="width:60px;">
-                            <h:outputText id="kwotawnwiersz" value="#{loop.wnma eq 'Wn' ? loop.kwota : null}" style="float: right;" rendered="#{kontoZapisFKView.pokaztransakcje eq false}">
+                            <h:outputText id="kwotawnwiersz" value="#{loop.wnma eq 'Wn' ? loop.kwotaWn : null}" style="float: right;" rendered="#{kontoZapisFKView.pokaztransakcje eq false}">
                                 <f:convertNumber minFractionDigits="2" maxFractionDigits="2" locale="PL"/>
                             </h:outputText>
                             <h:outputText id="kwotawnwiersztr" value="#{loop.wnma eq 'Wn' ? loop.pozostaloZapisynakoncie : null}" style="float: right;#{loop.isNowatransakcja() ? 'color: green': 'color: blue'}" 
@@ -272,24 +272,24 @@
                                 <f:convertNumber minFractionDigits="2" maxFractionDigits="2" locale="PL"/>
                             </h:outputText>
                         </p:column>
-                        <p:column headerText="Wn PLN" width="50" sortBy="#{loop.kwotaPLN}"   filterBy="#{loop.kwotaPLN}" filterMatchMode="contains"
+                        <p:column headerText="Wn PLN" width="50" sortBy="#{loop.kwotaWnPLN}"   filterBy="#{loop.kwotaWnPLN}" filterMatchMode="contains"
                                   rendered="#{kontoZapisFKView.pokaztransakcje eq false}" filterStyle="width:60px;">
-                            <h:outputText id="kwotawnwierszPLN" value="#{loop.wnma eq 'Wn' ? loop.kwotaPLN : null}" style="float: right;">
+                            <h:outputText id="kwotawnwierszPLN" value="#{loop.wnma eq 'Wn' ? loop.kwotaWnPLN : null}" style="float: right;">
                                 <f:convertNumber minFractionDigits="2" maxFractionDigits="2" locale="PL"/>
                             </h:outputText>
                         </p:column>
-                        <p:column headerText="Ma" width="40" style="background-color: #e6f2ff;" sortBy="#{loop.kwota}"   filterBy="#{loop.kwota}" filterMatchMode="contains"
+                        <p:column headerText="Ma" width="40" style="background-color: #e6f2ff;" sortBy="#{loop.kwotaMa}"   filterBy="#{loop.kwotaMa}" filterMatchMode="contains"
                                   rendered="#{kontoZapisFKView.nierenderujkolumnnywalut eq false or kontoZapisFKView.pokaztransakcje eq true}" filterStyle="width:60px;">
-                            <h:outputText id="kwotamawiersz" value="#{loop.wnma eq 'Ma' ? loop.kwota : null}" style="float: right;" rendered="#{kontoZapisFKView.pokaztransakcje eq false}">
+                            <h:outputText id="kwotamawiersz" value="#{loop.wnma eq 'Ma' ? loop.kwotaMa : null}" style="float: right;" rendered="#{kontoZapisFKView.pokaztransakcje eq false}">
                                 <f:convertNumber minFractionDigits="2" maxFractionDigits="2" locale="PL"/>
                             </h:outputText>
                             <h:outputText id="kwotamawiersztr" value="#{loop.wnma eq 'Ma' ? loop.pozostaloZapisynakoncie : null}" style="float: right;#{loop.isNowatransakcja() ? 'color: green': 'color: blue'}" rendered="#{kontoZapisFKView.pokaztransakcje eq true}">
                                 <f:convertNumber minFractionDigits="2" maxFractionDigits="2" locale="PL"/>
                             </h:outputText>
                         </p:column>
-                        <p:column headerText="Ma PLN" width="50" sortBy="#{loop.kwotaPLN}"  filterBy="#{loop.kwotaPLN}" filterMatchMode="contains"
+                        <p:column headerText="Ma PLN" width="50" sortBy="#{loop.kwotaMaPLN}"  filterBy="#{loop.kwotaMaPLN}" filterMatchMode="contains"
                                   rendered="#{kontoZapisFKView.pokaztransakcje eq false}"  filterStyle="width:60px;">
-                            <h:outputText id="kwotamawierszPLN" value="#{loop.wnma eq 'Ma' ? loop.kwotaPLN : null}" style="float: right;">
+                            <h:outputText id="kwotamawierszPLN" value="#{loop.wnma eq 'Ma' ? loop.kwotaMaPLN : null}" style="float: right;">
                                 <f:convertNumber minFractionDigits="2" maxFractionDigits="2" locale="PL"/>
                             </h:outputText>
                         </p:column>
