--- a/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankont.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankont.xhtml
@@ -29,9 +29,9 @@
                 <p:menuitem value="Blokada wszystkie" actionListener="#{planKontView.obslugaBlokadyKontaWszystkie()}" icon="ui-icon-locked" update=":form_dialog_plankont"/>
                 <p:menuitem value="Porządkuj wybrane konto" onclick="PF('confirm5').show();"  global="true" icon="ui-icon-tag" 
                             />
-                <p:menuitem value="Porządkuj konta" onclick="PF('confirm3').show();" global="false" icon="ui-icon-tag" 
+<!--                <p:menuitem value="Porządkuj konta" onclick="PF('confirm3').show();" global="false" icon="ui-icon-tag" 
                             />
-                <p:menuitem value="Weryfikuj słowniki" onclick="PF('confirm4').show();" global="false" icon="ui-icon-note" update="form_dialog_plankont:dataList" />
+                <p:menuitem value="Weryfikuj słowniki" onclick="PF('confirm4').show();" global="false" icon="ui-icon-note" update="form_dialog_plankont:dataList" />-->
                 <p:menuitem value="Usuń z subkontami"  icon="ui-icon-trash" actionListener="#{planKontView.usunZsubkontami('K')}" update="form_dialog_plankont:dataList"
                             rendered="#{facesContext.externalContext.remoteUser eq '4'}"/>
                 <p:menuitem value="Usuń wszystkie" onclick="PF('confirm2').show();" 
