--- a/kadry/src/main/webapp/info/sub/info.xhtml
+++ b/kadry/src/main/webapp/info/sub/info.xhtml
@@ -19,7 +19,7 @@
                     <p:dataTable id="dokumentyOkresowe" value="#{infoView.uzytkownicyPaski}" var="wpis"  rowIndexVar="row" 
                                  rowKey="#{wpis.id}" style="width: 1100px;height: 300px; overflow-y: scroll;" widgetVar="okresTable" 
                                  >
-                        <p:column headerText="01" width="120" sortBy="#{wpis.nazwisko}">  
+                        <p:column headerText="nazwisko" width="120" sortBy="#{wpis.nazwisko}">  
                             <h:outputText value="#{wpis.imieNazwisko}" />
                         </p:column>
                         <p:column headerText="01" width="20" sortBy="#{wpis.m1}" style="text-align: center;">  
@@ -70,7 +70,7 @@
                     <p:dataTable id="dokumentyOkresowe" value="#{infoView.uzytkownicyUmowy}" var="wpis"  rowIndexVar="row" 
                                  rowKey="#{wpis.id}" style="width: 1100px;height: 300px; overflow-y: scroll;" widgetVar="okresTable" 
                                  >
-                        <p:column headerText="01" width="120" sortBy="#{wpis.nazwisko}">  
+                        <p:column headerText="nazwisko" width="120" sortBy="#{wpis.nazwisko}">  
                             <h:outputText value="#{wpis.imieNazwisko}" />
                         </p:column>
                         <p:column headerText="01" width="20" sortBy="#{wpis.m1}" style="text-align: center;">  
@@ -111,6 +111,62 @@
                         </p:column>
                         <p:column headerText="razem" width="30"  sortBy="#{wpis.m13}" style="text-align: center;">  
                             <h:outputText value="#{wpis.m13}"/>
+                        </p:column>
+                    </p:dataTable>
+                </p:outputPanel>
+            </h:form>
+        </p:tab>
+        <p:tab title="Firma / paski">
+            <h:form>
+                <p:outputPanel style="padding: 20px;">
+                    <p:panel header="Statystyka pasków dla firm" style="width: 1100px; padding: 10px;"/>
+                    <p:dataTable id="dokumentyOkresowe" value="#{infoView.klienciPaski}" var="wpis"  rowIndexVar="row" 
+                                 rowKey="#{wpis.id}" style="width: 1200px;height: 600px; overflow-y: scroll;" widgetVar="okresTable" 
+                                 >
+                        <p:column headerText="nazwa" width="220" sortBy="#{wpis.nazwa}" filterBy="#{wpis.nazwa}" sortable="true" sortPriority="1" sortOrder="asc">  
+                            <h:outputText value="#{wpis.nazwa}" />
+                        </p:column>
+                        <p:column headerText="nip" width="60" sortBy="#{wpis.nip}">  
+                            <h:outputText value="#{wpis.nip}" />
+                        </p:column>
+                        <p:column headerText="01" width="20" sortBy="#{wpis.m1}" style="text-align: center;">  
+                            <h:outputText value="#{wpis.m1}"  rendered="#{wpis.m1 ne 0}"/>
+                        </p:column>
+                        <p:column headerText="02" width="20" sortBy="#{wpis.m2}" style="text-align: center;">  
+                            <h:outputText value="#{wpis.m2}" rendered="#{wpis.m2 ne 0}"/>
+                        </p:column>
+                        <p:column headerText="03" width="20" sortBy="#{wpis.m3}" style="text-align: center;">  
+                            <h:outputText value="#{wpis.m3}" rendered="#{wpis.m3 ne 0}"/>
+                        </p:column>
+                        <p:column headerText="04" width="20" sortBy="#{wpis.m4}" style="text-align: center;">  
+                            <h:outputText value="#{wpis.m4}" rendered="#{wpis.m4 ne 0}"/>
+                        </p:column>
+                        <p:column headerText="05" width="20" sortBy="#{wpis.m5}" style="text-align: center;">  
+                            <h:outputText value="#{wpis.m5}" rendered="#{wpis.m5 ne 0}"/>
+                        </p:column>
+                        <p:column headerText="06" width="20" sortBy="#{wpis.m6}" style="text-align: center;">  
+                            <h:outputText value="#{wpis.m6}" rendered="#{wpis.m6 ne 0}"/>
+                        </p:column>
+                        <p:column headerText="07" width="20" sortBy="#{wpis.m7}" style="text-align: center;">  
+                            <h:outputText value="#{wpis.m7}" rendered="#{wpis.m7 ne 0}"/>
+                        </p:column>
+                        <p:column headerText="08" width="20" sortBy="#{wpis.m8}" style="text-align: center;">  
+                            <h:outputText value="#{wpis.m8}" rendered="#{wpis.m8 ne 0}"/>
+                        </p:column>
+                        <p:column headerText="09" width="20" sortBy="#{wpis.m9}" style="text-align: center;">  
+                            <h:outputText value="#{wpis.m9}"  rendered="#{wpis.m9 ne 0}"/>
+                        </p:column>
+                        <p:column headerText="10" width="20" sortBy="#{wpis.m10}" style="text-align: center;">  
+                            <h:outputText value="#{wpis.m10}" rendered="#{wpis.m10 ne 0}"/>
+                        </p:column>
+                        <p:column headerText="11" width="20" sortBy="#{wpis.m11}" style="text-align: center;">  
+                            <h:outputText value="#{wpis.m11}" rendered="#{wpis.m11 ne 0}"/>
+                        </p:column>
+                        <p:column headerText="12" width="20"  sortBy="#{wpis.m12}" style="text-align: center;">  
+                            <h:outputText value="#{wpis.m12}" rendered="#{wpis.m12 ne 0}"/>
+                        </p:column>
+                        <p:column headerText="razem" width="30"  sortBy="#{wpis.m13}" style="text-align: center;">  
+                            <h:outputText value="#{wpis.m13}" rendered="#{wpis.m13 ne 0}"/>
                         </p:column>
                     </p:dataTable>
                 </p:outputPanel>
