--- a/npkpir_23/web/ksiegowaFK/ksiegowaFKPlanKont.xhtml
+++ b/npkpir_23/web/ksiegowaFK/ksiegowaFKPlanKont.xhtml
@@ -95,6 +95,9 @@
                     <p:outputPanel rendered="#{menu_plankont.file8}">
                         <ui:include src="sub/podstrony/plankont/plankontimport.xhtml"/>
                     </p:outputPanel>
+                    <p:outputPanel rendered="#{menu_plankont.file9}">
+                        <ui:include src="sub/podstrony/plankont/plankontkontopozycja.xhtml"/>
+                    </p:outputPanel>
                     <ui:include src="sub/dialog/dialog_zmiana_okresu.xhtml"/>
                 </p:layoutUnit><ui:include src="sub/layout/south.xhtml"/> 
             </p:layout>
