--- a/npkpir_23/web/ksiegowa/sub/layoutVat/west.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutVat/west.xhtml
@@ -17,7 +17,7 @@
                 <p:selectOneMenu id="miesiacWpisu" value="#{WpisView.miesiacWpisu}" style="width: 70px;">
                     <f:selectItems value="#{mce.mceList}"/>
                     <p:ajax event="change" partialSubmit="true"
-                            update="@(form)"/>
+                            update="@(form)" listener="#{vatUeFKView.aktualizujTabeleTabela}"/>
                 </p:selectOneMenu>
             </p:panelGrid>
            <p:panel id="linki" header="linki">
